--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "authors": [
         {
             "name": "Jeroen de Graaf",
-            "email": "jeroen.graaf@gmail.com",
-            "homepage": "http://jero.work"
+            "email": "info@jero.work",
+            "homepage": "https://jero.work"
         }
     ],
     "require": {
