Refactor request handler with direct response insert instead of an final mw

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,10 @@
     "provide": {
         "psr/http-server-handler": "1.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^6.5",
+        "zendframework/zend-diactoros": "^1.7"
+    },
     "suggest": {
         "zendframework/zend-diactoros": "As PSR-7 implementation"
     },
@@ -34,6 +38,11 @@
     "autoload": {
         "psr-4": {
             "Jerowork\\MiddlewareDispatcher\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Jerowork\\MiddlewareDispatcher\\Test\\": "tests/"
         }
     }
 }
